--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -28,10 +28,10 @@ doctrine:
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Translatable/Entity"
                 alias: GedmoTranslatable # (optional) it will default to the name set for the mapping
                 is_bundle: false
-        filters:
-            softdeleteable:
-                class: Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter
-                enabled: true
+        #filters:
+            #softdeleteable:
+                #class: Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter
+                #enabled: true
         controller_resolver:
             auto_mapping: false
 
