--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "require": {
         "php": ">=8.3",
         "ext-ctype": "*",
+        "ext-gd": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "ext-pdo": "*",
+        "ext-zip": "*",
         "beberlei/doctrineextensions": "^1.5",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
@@ -19,6 +23,7 @@
         "knplabs/knp-time-bundle": "^2.4",
         "liip/imagine-bundle": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.4",
+        "phpoffice/phpspreadsheet": "^2.1",
         "phpstan/phpdoc-parser": "^1.29",
         "stof/doctrine-extensions-bundle": "^1.10",
         "symfony/asset": "7.1.*",
@@ -56,11 +61,13 @@
         "symfony/web-link": "7.1.*",
         "symfony/workflow": "7.1.*",
         "symfony/yaml": "7.1.*",
+        "symfonycasts/dynamic-forms": "^0.1.2",
         "symfonycasts/reset-password-bundle": "^1.22",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/cache-extra": "^3.10",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.10",
+        "twig/string-extra": "^3.10",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.3"
     },
